update docker-compose.yaml and main.yaml

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: anime-api
+    container_name: ms-anime
     ports:
       - "8080:8080"
     environment:
