--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -7,7 +7,7 @@ on:
     branches: [ main ]
 
 jobs:
-  execute-tests:
+  test:
     runs-on: ubuntu-latest
     
     strategy:
@@ -27,6 +27,23 @@ jobs:
     
     - name: Run tests
       run: ./mvnw clean test
+
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v3
+      
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v3
+    
+    - name: Build and push
+      uses: docker/build-push-action@v6
+      with:
+        context: .
+        file: ./Dockerfile
+        push: false
+        tags: |
+          elderpereira/ms-anime:latest
+          elderpereira/ms-anime:${{ github.sha }}
+          
     
 
  
