--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,8 +1,6 @@
 name: main
 
 on:
-  pull_request:
-    branches: [ main ]
   push:
     branches: [ main ]
 
@@ -24,10 +22,13 @@ jobs:
         java-version: ${{ matrix.java-version }}
         distribution: 'temurin'
         cache: maven
-    
-    - name: Run tests
-      run: ./mvnw clean test
 
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+    
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v3
       
@@ -39,11 +40,12 @@ jobs:
       with:
         context: .
         file: ./Dockerfile
-        push: false
+        push: true
+        platforms: linux/amd64,linux/arm64
         tags: |
           elderpereira/ms-anime:latest
           elderpereira/ms-anime:${{ github.sha }}
-          
+
     
 
  
