--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -5,7 +5,7 @@ on:
     branches: [ main ]
 
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
     
     strategy:
@@ -15,6 +15,8 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+      with:
+        fetch-depth: 0  # Necessário para criar tags
     
     - name: Set up JDK ${{ matrix.java-version }}
       uses: actions/setup-java@v4
@@ -22,6 +24,14 @@ jobs:
         java-version: ${{ matrix.java-version }}
         distribution: 'temurin'
         cache: maven
+
+    - name: Bump version and push tag
+      id: tag_version
+      uses: mathieudutour/github-tag-action@v6.2
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        default_bump: patch
+        tag_prefix: v
 
     - name: Log in to Docker Hub
       uses: docker/login-action@v3
@@ -44,6 +54,7 @@ jobs:
         platforms: linux/amd64,linux/arm64
         tags: |
           elderpereira/ms-anime:latest
+          elderpereira/ms-anime:${{ steps.tag.outputs.version }}
           elderpereira/ms-anime:${{ github.sha }}
 
     
