--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -31,7 +31,7 @@ jobs:
         cache: maven
 
     - name: Bump version and push tag
-      id: tag
+      id: tag_id
       uses: mathieudutour/github-tag-action@v6.2
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
@@ -59,7 +59,7 @@ jobs:
         platforms: linux/amd64,linux/arm64
         tags: |
           elderpereira/ms-anime:latest
-          elderpereira/ms-anime:${{ steps.tag.outputs.version }}
+          elderpereira/ms-anime:${{ steps.tag_id.outputs.version }}
           elderpereira/ms-anime:${{ github.sha }}
 
     
