--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -5,7 +5,7 @@ on:
     branches: [ dev ]
 
 jobs:
-  test-and-build:
+  test:
     runs-on: ubuntu-latest
     
     strategy:
@@ -25,6 +25,8 @@ jobs:
     
     - name: Run tests
       run: ./mvnw clean test
+
+      
     
 
  
