--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,11 +1,11 @@
 # Project identification
 sonar.projectKey=ms-anime
-sonar.projectName=Microservice Anime Project
+#sonar.projectName=Microservice Anime Project
 #sonar.projectVersion=1.0
 
 # SonarQube server configuration
-sonar.host.url=http://localhost:9000
-sonar.login=sqp_8648940318cebd76507fe9b3e7f9b61971ae0bf4
+#sonar.host.url=http://localhost:9000
+#sonar.login=sqp_8648940318cebd76507fe9b3e7f9b61971ae0bf4
 
 # Source configuration
 sonar.sources=src/main
