--- a/.github/workflows/sonar.yaml
+++ b/.github/workflows/sonar.yaml
@@ -35,4 +35,5 @@ jobs:
         uses: sonarsource/sonarqube-scan-action@master
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          sonar.organization: eldercomputacao
           #SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
