--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 # Project identification
 sonar.projectKey=ms-anime
+sonar.organization=eldercomputacao
 #sonar.projectName=Microservice Anime Project
 #sonar.projectVersion=1.0
 
