update sonar-preject 2

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 # Project identification
-sonar.projectKey=ms-anime
+sonar.projectKey=eldercomputacao_ms-anime
 sonar.organization=eldercomputacao
 #sonar.projectName=Microservice Anime Project
 #sonar.projectVersion=1.0
