--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,6 +5,7 @@ sonar.organization=eldercomputacao
 #sonar.projectVersion=1.0
 
 # SonarQube server configuration
+sonar.host.url=https://sonarcloud.io/api/project_badges/measure?project=eldercomputacao_ms-anime
 #sonar.host.url=http://localhost:9000
 #sonar.login=sqp_8648940318cebd76507fe9b3e7f9b61971ae0bf4
 
