--- a/.github/workflows/sonar.yaml
+++ b/.github/workflows/sonar.yaml
@@ -1,12 +1,11 @@
-name: SonarQube Analysis
-
+name: SonarQube Scan
 on:
   push:
     branches:
       - main
   pull_request:
     types: [opened, synchronize, reopened]
-
+    
 jobs:
   sonarqube:
     runs-on: ubuntu-latest
@@ -14,12 +13,11 @@ jobs:
     strategy:
       matrix:
         java-version: [21]
-    
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
         with:
-          fetch-depth: 0
+          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
       
       - name: Set up JDK ${{ matrix.java-version }}
         uses: actions/setup-java@v4
@@ -29,10 +27,9 @@ jobs:
           cache: maven
       
       - name: Run tests
-        run: ./mvnw clean verify
+        run: ./mvnw clean test
       
       - name: SonarQube Scan
-        uses: sonarsource/sonarqube-scan-action@master
+        uses: SonarSource/sonarqube-scan-action@v6
         env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}          
-          #SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
